# serializer version: 1
# name: test_feature_version_changes_with_code_version
  dict({
    'v1': '2a68135ecef5cffeb310598c567babad3f7ca34053cf5f51f7aeb34de51d7880',
    'v2': '87daa733b69d31d0cfbbb93a538a33e4742c0eae371618f1284b47cfe285db06',
  })
# ---
# name: test_feature_version_changes_with_dependencies
  dict({
    'no_deps': '8b1eebd5c96addd4e4126b13597f54a0502b646b01579d648ebbf3740f5300e0',
    'with_deps': 'c641fc7efa6288d969142019342fa9b47c266c876a8ea31fd808fdbf8bf18893',
  })
# ---
# name: test_feature_version_deterministic
  '33c004fe4137e09bce3821702bae48ebe3a821183ac3f7e5369efaa177d07857'
# ---
# name: test_feature_version_multi_field
  '76cc968df48602c4cd03d86798001057375f33aae833aea66754838479eb6b07'
# ---
# name: test_feature_version_with_field_deps
  dict({
    'no_field_deps': '9783311bcc336745058386ba6d177000c71a51b0edd716fa3ca8ae7e73e912d6',
    'with_field_deps': '27c14775d3390dbbc397cd841adec9736766098d00f4425238c06e825e8dd8cc',
  })
# ---
